Adds text stats

--- a/index.html
+++ b/index.html
@@ -196,11 +196,26 @@
     </div>
 
                     </div>
+                <div class="bottom-info">
                     <div class="text-stats">
                         <span class="title">Since your birth:</span>
                         <ul>
+                            <li class="life-holder">
+                                Life expectancy in <span class="life-country"></span> has <span class="life-change-direction">changed</span> from <span class="life-past"></span> years to <span class="life-present"></span> years.
+                            </li>
+                            <li class="completion-holder">
+                                The percent of students completing school has changed from <span class="completion-past"></span>% to <span class="completion-present"></span>%.
+                            </li>
+                            <li class="infant-holder">
+                                Infant mortality has gone from <span class="infant-past"></span> to <span class="infant-present"></span> (per 1,000 births).</li>
                             <li>
-                                Life expectancy in <span class="life-country"></span> has <span class="life-change-direction">[changed]</span> from <span class="life-past"></span> to <span class="life-present"></span> years.
+                                While adult literacy is now <span class="literacy-present"></span>% from <span class="literacy-past"></span>%.
+                            </li>
+                            <li class="income-holder">
+                                Income per person is now <span class="income-present"></span> from <span class="income-past"></span>.
+                            </li>
+                            <li class="birth-holder">
+                                And the birth rate has gone from <span class="birth-past"></span> to <span class="birth-present"></span> (per 1,000 population).
                             </li>
                         </ul>
                     </div>
@@ -213,6 +228,7 @@
                             </ul>
                         </div>
                     </div>
+                </div>
 
                 </div>
 
