--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                             </li>
                             <li class="infant-holder">
                                 Infant mortality has gone from <span class="infant-past"></span> to <span class="infant-present"></span> (per 1,000 births).</li>
-                            <li>
+                            <li class="literacy-holder">
                                 While adult literacy is now <span class="literacy-present"></span>% from <span class="literacy-past"></span>%.
                             </li>
                             <li class="income-holder">
@@ -220,11 +220,25 @@
                         </ul>
                     </div>
                     <div class="social-share">
+                    <!-- Facebook SDK -->
+                    <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.9&appId=162830337136711";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
                         <h2>Share the good news.</h2>
                         <div class="row">
                             <ul>
-                                <li class="facebook">Facebook</li>
-                                <li class="twitter">Twitter</li>
+                                <li class="facebook">
+<div class="fb-share-button" data-href="https://gricha2380.github.io/stats/" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fgricha2380.github.io%2Fstats%2F&amp;src=sdkpreparse">Share</a></div>
+</li>
+                                <li class="twitter">
+                                    <a href="https://twitter.com/share" class="twitter-share-button" data-size="large" data-text="How much has the world improved since you were born?" data-hashtags="progress" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+                                </li>
                             </ul>
                         </div>
                     </div>
