adds view the data link

--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
                             <li class="birth-holder">
                                 And the birth rate has gone from <span class="birth-past"></span> to <span class="birth-present"></span> (per 1,000 population).
                             </li>
+                            <span><a href="https://gregor.demo.socrata.com/browse?category=Education&limitTo=datasets">View the data</a></span>
                         </ul>
                     </div>
                     <div class="social-share">
