minor chart formatting

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     <div class="chart-holder">
 
                             <!-- Chart Containers -->
-    <div class="container">
+    <div class="container-plain">
         <div class="row">
             <div class="col-lg-4">
                 <div id="life_expectancy"></div>
@@ -217,7 +217,7 @@
                             <li class="birth-holder">
                                 And the birth rate has gone from <span class="birth-past"></span> to <span class="birth-present"></span> (per 1,000 population).
                             </li>
-                            <span><a href="https://gregor.demo.socrata.com/browse?category=Education&limitTo=datasets">View the data</a></span>
+                            <span><a href="https://gregor.demo.socrata.com/browse?category=Education&limitTo=datasets" target="_blank">View the data</a></span>
                         </ul>
                     </div>
                     <div class="social-share">
