Skip over charts with blank data
And switch to flex box for grid

--- a/index.html
+++ b/index.html
@@ -171,25 +171,23 @@
 
                             <!-- Chart Containers -->
     <div class="container-plain">
-        <div class="row">
-            <div class="col-lg-4">
+        <div class="row flex">
+            <div class="col">
                 <div id="life_expectancy"></div>
             </div>
-            <div class="col-lg-4">
+            <div class="col">
                 <div id="infant_mortality_rate"></div>
             </div>
-            <div class="col-lg-4">
+            <div class="col">
                 <div id="primary_completion_rate_total_of_relevant_age_group"></div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-4">
+            <div class="col">
                 <div id="adult_15_literacy_rate_total"></div>
             </div>
-            <div class="col-lg-4">
+            <div class="col">
                 <div id="gdp_per_capita_ppp"></div>
             </div>
-            <div class="col-lg-4">
+            <div class="col">
                 <div id="birth_rate"></div>
             </div>
         </div>
