Hard code chart legend

--- a/index.html
+++ b/index.html
@@ -142,7 +142,16 @@
                     </div>
                 </form>
             </div>
-            <div class="legend-holder" id="legend-master"></div>
+            <div class="legend-holder" id="legend-master">
+                <div class="legend-block present">
+                    <span class="text-label">Present</span>
+                    <span class="color"></span>
+                </div>
+                <div class="legend-block past">
+                    <span class="text-label"></span>
+                    <span class="color"></span>
+                </div>
+            </div>
             <div class="row">
                 <div class="chart-holder">
                     <!-- Chart Containers -->
