--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="How much has the world changed since you've been born?">
+    <meta name="author" content="Gregor Richardson">
     <link rel="icon" href="img/favicon.png">
     <title>Incremental Progress</title>
     <!-- Bootstrap core CSS -->
@@ -64,8 +64,9 @@
                     <div class="row year-born">
                         <div class="input-holder">
                             <label for="name">What year were you born?</label>
-                            <input type="number" id="born" name="born" min="1950" max="2017" value="1990" tabindex="1">
+                            <input type="number" id="born" name="born" min="1950" max="2011" value="1990" tabindex="1">
                         </div>
+                        <div class="bad-date"></div>
                     </div>
                     <div class="row spinner-row"><span class="spinner-default spinner-large"></span></div>
                     <div class="dynamic-input">
