about page tweak & shortens loader time

--- a/about.html
+++ b/about.html
@@ -7,7 +7,8 @@
     <li><strong><a href="https://www.safe.com/">FME</a></strong> for data transformation</li>
     <li><strong><a href="https://www.sublimetext.com/3">Sublime</a></strong> for zen coding</li>
     <li><strong><a href="http://brackets.io/">Brackets</a></strong> for SASS compiling</li>
-    <li><strong><a href="https://dev.socrata.com">Socrata API</a></strong> storing data</li>
+    <li><strong><a href="https://www.gapminder.org/data/">Gapminder</a></strong> for finding global datsets</li>
+    <li><strong><a href="https://dev.socrata.com">Socrata API</a></strong> storing dataset endpoints</li>
     <li><strong><a href="http://selectize.github.io/selectize.js">Selectize</a></strong> for fancy dropdown menus</li>
     <div class="closing-statements">
     	<li>Built with D3 and JQuery.</li>
