--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     </nav>
     <div class="container">
         <div class="body-holder">
+            <div class="control-div-holder">
             <div class="control-div">
                 <form class="full-width">
                     <div class="row year-born">
@@ -99,6 +100,7 @@
 
                 </form>
             </div>
+        </div>
             <div class="legend-holder" id="legend-master">
                 <div class="legend-block past">
                     <span class="text-label"></span>
