more about page tweaks
Longer description, links to JQuery and D3

--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
     <li><strong><a href="https://dev.socrata.com">Socrata API</a></strong> storing dataset endpoints</li>
     <li><strong><a href="http://selectize.github.io/selectize.js">Selectize</a></strong> for fancy dropdown menus</li>
     <div class="closing-statements">
-    	<li>Built with D3 and JQuery.</li>
+    	<li>Built with <a href="https://d3js.org/">D3.js</a> and <a href="http://jquery.com/">JQuery</a>.</li>
         <li>Built for practice, motivation, and reflection.</li>
-        <li>Gregor, 2017.</li>
+        <li>2017. Gregor</li>
     </div>
 </div>
