--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             </span>
                         </button>
                         <div class="info-content">
-                            How much has the world improved since you were born?
+                            Change can happen very quickly. While living our daily lives we often loose sight of that. In the labor to create this project, as well as in the underlying data, the lesson is that progress is real, and it is all around us. How much has the world improved since you were born?
                         </div>
                     </div>
                 </div>
