Data table (work in progress)
Holy shit

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
 
 <body>
     <nav class="navbar">
+    <div class="thin-nav">
+        <div class="thin-nav-inner container">
+            <li><a href="index.html" class="active">Overview</a></li>
+            <li><a href="tables.html">Data Tables</a></li>
+        </div>
+    </div>
         <div class="container">
             <div class="info-pane">
                 <div class="inner-container">
