trying to clear the table

--- a/tables.html
+++ b/tables.html
@@ -73,8 +73,8 @@
                         <div class="row col-md-4">
                             <div><label for="metric">Improvement Metric</label></div>
                                 <select id="metric" class="metric-menu" data-placeholder="Select Country" style="">
-                                    <option value="One">One</option>
-                                    <option value="Two">Two</option>
+                                    <option value="https://gregor.demo.socrata.com/resource/68np-55g5.json" colTitle="life_expectancy">Life Expectancy</option>
+                                    <option value="https://gregor.demo.socrata.com/resource/26t6-aicm.json">Infant Mortality</option>
                                     <option value="Three">Three</option>
                                     <option value="">Four</option>
                                     <option value="">Five</option>
@@ -121,7 +121,7 @@
                             <thead>
                                 <tr>
                                     <th>Country</th>
-                                    <!-- <th>1950</th>
+                                    <th>1950</th>
                                     <th>1951</th>
                                     <th>1952</th>
                                     <th>1953</th>
@@ -158,8 +158,8 @@
                                     <th>1984</th>
                                     <th>1985</th>
                                     <th>1986</th>
-                                    <th>1987</th> -->
-                                    <!-- <th>1988</th> -->
+                                    <th>1987</th>
+                                    <th>1988</th>
                                     <th>1989</th>
                                     <th>1990</th>
                                     <th>1991</th>
