Global avg & data tables almost working

--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
                 </div>
                 <div class="bottom-info">
                     <div class="text-stats">
-                        <span class="title">Since your birth:</span>
+                        <span class="title">Changes <span class="life-country"></span> since your birth:</span>
                         <ul>
                             <li class="life-holder">
-                                Life expectancy in <span class="life-country"></span> has <span class="life-change-direction">changed</span> from <span class="life-past"></span> years to <span class="life-present"></span> years.
+                                Life expectancy has <span class="life-change-direction">changed</span> from <span class="life-past"></span> years to <span class="life-present"></span> years.
                             </li>
                             <li class="completion-holder">
                                 The percent of students completing school has changed from <span class="completion-past"></span>% to <span class="completion-present"></span>%.
