--- a/tables.html
+++ b/tables.html
@@ -75,9 +75,10 @@
                                 <select id="metric" class="metric-menu" data-placeholder="Select Country" style="">
                                     <option value="https://gregor.demo.socrata.com/resource/68np-55g5.json" colTitle="life_expectancy">Life Expectancy</option>
                                     <option value="https://gregor.demo.socrata.com/resource/26t6-aicm.json">Infant Mortality</option>
-                                    <option value="Three">Three</option>
-                                    <option value="">Four</option>
-                                    <option value="">Five</option>
+                                    <option value="https://gregor.demo.socrata.com/resource/nx2u-97up.json">School Completion</option>
+                                    <option value="https://gregor.demo.socrata.com/resource/5dhh-qisz.json">Adult Literacy</option>
+                                    <option value="https://gregor.demo.socrata.com/resource/uzdz-shpf.json">Income Per Person</option>
+                                    <option value="https://gregor.demo.socrata.com/resource/a9a5-mkyv.json">Birth Rate</option>
                                 </select>
                         </div>
 <div class="stat-holder col-md-8">
@@ -191,7 +192,7 @@
                 </div>
                 <div class="bottom-info">
                     <div class="text-stats">
-                        <span class="title">Since your birth:</span>
+                    <span class="title">Changes in <span class="country-title"></span>since your birth:</span>
                         <ul>
                             <li class="life-holder">
                                 Life expectancy in <span class="life-country"></span> has <span class="life-change-direction">changed</span> from <span class="life-past"></span> years to <span class="life-present"></span> years.
