Close to finishing table

--- a/tables.html
+++ b/tables.html
@@ -67,7 +67,7 @@
         </div>
     </nav>
     <div class="container">
-        <div class="body-holder">
+        <div class="body-holder table-temp">
             <div class="control-div-holder">
             <div class="control-div">
                         <div class="row col-md-4">
@@ -84,21 +84,21 @@
 <div class="stat-holder col-md-8">
     <div class="row">
         <div class="stat-entry col-md-6">
-            <div class="stat-title">Lowest Life Expectancy</div>
-            <div class="stat-country">Grenada</div>
-            <div class="stat-value">42 years</div>
+        <div class="stat-title table-lowest">Lowest <span class="table-lowest-title">Life Expectancy</span></div>
+            <div class="stat-country table-lowest-name">Grenada</div>
+            <div class="stat-value table-lowest-value"></div>
         </div>
         <div class="stat-entry col-md-6">
-            <div class="stat-title">Lowest Life Expectancy</div>
-            <div class="stat-country">Grenada</div>
-            <div class="stat-value">42 years</div>
+            <div class="stat-title table-average">Average Life Expectancy</div>
+            <div class="stat-country table-average-name">Grenada</div>
+            <div class="stat-value table-average-value">42 years</div>
         </div>
     </div>
     <div class="row">
         <div class="stat-entry col-md-6">
-            <div class="stat-title">Lowest Life Expectancy</div>
-            <div class="stat-country">Grenada</div>
-            <div class="stat-value">42 years</div>
+            <div class="stat-title table-highest">Highest Life Expectancy</div>
+            <div class="stat-country table-highest-name">Grenada</div>
+            <div class="stat-value table-highest-value">42 years</div>
         </div>
         <div class="stat-entry col-md-6">
             <div class="stat-title">Lowest Life Expectancy</div>
@@ -122,28 +122,6 @@
                             <thead>
                                 <tr>
                                     <th>Country</th>
-                                    <th>1950</th>
-                                    <th>1951</th>
-                                    <th>1952</th>
-                                    <th>1953</th>
-                                    <th>1954</th>
-                                    <th>1955</th>
-                                    <th>1956</th>
-                                    <th>1957</th>
-                                    <th>1958</th>
-                                    <th>1959</th>
-                                    <th>1960</th>
-                                    <th>1961</th>
-                                    <th>1962</th>
-                                    <th>1963</th>
-                                    <th>1964</th>
-                                    <th>1965</th>
-                                    <th>1966</th>
-                                    <th>1967</th>
-                                    <th>1968</th>
-                                    <th>1969</th>
-                                    <th>1970</th>
-                                    <th>1971</th>
                                     <th>1972</th>
                                     <th>1973</th>
                                     <th>1974</th>
